--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -3599,7 +3599,7 @@
     "\n",
     "# Interpreting each Principal Component\n",
     "loadings = df_pca[metric_features + pca_feat_names].corr().loc[metric_features, pca_feat_names]\n",
-    "loadings.style.applymap(_color_red_or_green)"
+    "loadings.style.applymap(_color_red_or_green)\n"
    ]
   },
   {
