--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -3596,10 +3596,13 @@
     "    else:\n",
     "        color = ''\n",
     "    return color\n",
+    "    \n",
+    "\n",
     "\n",
     "# Interpreting each Principal Component\n",
     "loadings = df_pca[metric_features + pca_feat_names].corr().loc[metric_features, pca_feat_names]\n",
-    "loadings.style.applymap(_color_red_or_green)\n"
+    "loadings.style.applymap(_color_red_or_green)\n",
+    "\n"
    ]
   },
   {
